infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: robertmarriott/auth
        resources:
          limits:
            memory: "256Mi"
            cpu: "0.5"
        ports:
        - containerPort: 3000
