infra/k8s/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: auth-ingress
spec:
  rules:
  - host: ticketing.robertmarriott.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-service
            port:
              number: 3000
